--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "format-test": "prettier --write \"test/**/*.ts\" \"test/**/*.js\" --no-error-on-unmatched-pattern",
     "eslint": "eslint --fix",
     "format": "npm run format-src && npm run format-test && npm run eslint",
-    "test": "jest"
+    "test": "jest",
+    "release": "standard-version"
   },
   "devDependencies": {
     "@types/jest": "^29.1.2",
@@ -36,6 +37,7 @@
     "eslint-config-prettier": "^8.5.0",
     "jest": "^29.1.2",
     "prettier": "2.7.1",
+    "standard-version": "^9.5.0",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   },
