build: Added the ability to build a package as a compact file.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,12 @@
             ],
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Compact builder",
+            "program": "${workspaceFolder}/build.js"
         }
     ]
 }
