build: Disabled "noUnusedLocals" option

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
         "strictPropertyInitialization": true,
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
-        "noUnusedLocals": true,
+        "noUnusedLocals": false,
         "noUnusedParameters": true,
         "noImplicitReturns": true,
         "skipLibCheck": true,
