chore: Disabled eslint rule "no-constant-condition" for loops

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -63,6 +63,12 @@
         "no-case-declarations": [
             "warn"
         ],
+        "no-constant-condition": [
+          "error",
+          {
+            "checkLoops": false
+          }
+        ],
         "no-duplicate-imports": [
             "warn"
         ],
