chore: Keywords updated

--- a/package.json
+++ b/package.json
@@ -33,7 +33,38 @@
     "png",
     "tga",
     "tif",
-    "tiff"
+    "tiff",
+    "color",
+    "contrast",
+    "saturation",
+    "brightness",
+    "gamma",
+    "exposure",
+    "hue",
+    "bump",
+    "convolution",
+    "blur",
+    "grayscale",
+    "invert",
+    "noise",
+    "pixelate",
+    "pixelation",
+    "quantize",
+    "quantization",
+    "sepia",
+    "sobel",
+    "vignette",
+    "rotate",
+    "resize",
+    "crop",
+    "rectify",
+    "flip",
+    "pixel",
+    "line",
+    "rect",
+    "circle",
+    "fill",
+    "flood-fill"
   ],
   "scripts": {
     "format-src": "prettier --write \"src/**/*.ts\" \"src/**/*.js\" --no-error-on-unmatched-pattern",
