chore: Removed comments in compiled js files, but kept in the declaration files

--- a/package.json
+++ b/package.json
@@ -72,7 +72,9 @@
     "eslint": "eslint --fix",
     "format": "npm run format-src && npm run format-test && npm run eslint",
     "test": "jest",
-    "build:normal": "tsc",
+    "build:normal-js": "tsc --removeComments",
+    "build:normal-typings": "tsc --emitDeclarationOnly",
+    "build:normal": "npm run build:normal-js && npm run build:normal-typings",
     "build:compact-js": "node build.js",
     "build:compact-typings": "tsc --emitDeclarationOnly --declaration --outFile lib-compact/index.d.ts",
     "build:compact": "npm run build:compact-js && npm run build:compact-typings",
