chore: reworked keywords

--- a/package.json
+++ b/package.json
@@ -35,36 +35,59 @@
     "tif",
     "tiff",
     "color",
+    "pixel",
     "contrast",
     "saturation",
     "brightness",
     "gamma",
     "exposure",
     "hue",
+    "adjust-color",
+    "billboard",
+    "bleach-bypass",
+    "bulge-distortion",
     "bump",
+    "chromatic-aberration",
+    "color-halftone",
+    "color-offset",
     "convolution",
-    "blur",
+    "dither",
+    "drop-shadow",
+    "edge-glow",
+    "emboss",
+    "gaussian-blur",
     "grayscale",
+    "hexagon-pixelate",
     "invert",
+    "luminance-threshold",
+    "monochrome",
     "noise",
+    "normalize",
     "pixelate",
-    "pixelation",
     "quantize",
-    "quantization",
+    "reinhard-tone-map",
     "sepia",
+    "sketch",
+    "smooth",
     "sobel",
+    "stretch-ditortion",
     "vignette",
-    "rotate",
-    "resize",
-    "crop",
-    "rectify",
-    "flip",
-    "pixel",
-    "line",
-    "rect",
     "circle",
+    "line",
+    "polygon",
+    "rect",
     "fill",
-    "flood-fill"
+    "composite",
+    "crop",
+    "crop-circle",
+    "flip",
+    "rectify",
+    "resize",
+    "rotate",
+    "flip",
+    "flip-horizontal",
+    "flip-vertical",
+    "trim"
   ],
   "scripts": {
     "test:color": "jest ./test/color",
