chore: Fix of using release-it instead of standard-version

--- a/.release-it.json
+++ b/.release-it.json
@@ -1,5 +1,6 @@
 {
   "git": {
+    "changelog": "npx auto-changelog --stdout --commit-limit false -u --template https://raw.githubusercontent.com/release-it/release-it/main/templates/changelog-compact.hbs",
     "commitMessage": "chore: Release v${version}"
   },
   "github": {
