--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "eslint-config-prettier": "^8.7.0",
     "jest": "^29.5.0",
     "prettier": "2.8.4",
-    "standard-version": "^9.5.0",
+    "release-it": "^15.10.1",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   },
