--- a/package.json
+++ b/package.json
@@ -109,18 +109,18 @@
     "release": "release-it"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.1",
-    "@types/node": "^20.2.3",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.3.2",
     "@types/uzip": "^0.20201231.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.7",
-    "@typescript-eslint/parser": "^5.59.7",
-    "eslint": "^8.41.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "jest": "^29.5.0",
-    "prettier": "2.8.8",
-    "release-it": "^15.10.3",
+    "prettier": "^2.8.8",
+    "release-it": "^15.11.0",
     "ts-jest": "^29.1.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.3"
   },
   "dependencies": {
     "uzip": "^0.20201231.0"
