--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "type": "git",
     "url": "https://github.com/yegor-pelykh/image-in-browser"
   },
+  "type": "module",
   "main": "lib/index.js",
   "files": [
     "lib/**/*.js",
