feat: The UZIP dependency has been replaced with an internal UZIP implementation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "allowJs": true,
     "declaration": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
@@ -28,7 +29,9 @@
     ],
   },
   "include": [
+    "src/**/*.js",
     "src/**/*.ts",
+    "test/**/*.js",
     "test/**/*.ts"
   ]
 }
