feat: Implement physical pixel size management for PNG
This feature adds support for the 'pHYs' chunk in the PNG format specification, which governs the intended physical pixel size. The physical pixel size, often measured in DPI, affects the displayed size of the image in viewers that support this feature.

A practical application of this functionality is encoding HiDPI images (such as 2x or 4x) for display on Apple Retina screens.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,4 +6,6 @@
       "source.fixAll.eslint": "explicit"
     },
     "files.eol": "\n",
+    "pieces.cloudCapabilities": "Blended",
+    "pieces.telemetry": true,
 }
