chore: Added keywords to package.json

--- a/package.json
+++ b/package.json
@@ -62,12 +62,14 @@
     "gaussian-blur",
     "grayscale",
     "hexagon-pixelate",
+    "histogram",
     "invert",
     "luminance-threshold",
     "monochrome",
     "noise",
     "normalize",
     "pixelate",
+    "palette",
     "quantize",
     "reinhard-tone-map",
     "sepia",
